--- a/src/efcorememorytest.csproj
+++ b/src/efcorememorytest.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4"/>
     <PackageReference Include="Bogus" Version="29.0.2"/>
     <PackageReference Include="AutoFixture" Version="4.11.0"/>
+    <PackageReference Include="morelinq" Version="3.3.2"/>
   </ItemGroup>
 </Project>
